updated index.ejs with additional paragraph

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <p>Zeitplan is a user-friendly web application designed to be the reminder partner you've always needed.</p>
   </body>
 </html>
