--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
@@ -6,34 +6,36 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h2 class="page-header">Register</h2>
-    <p>Please register using the form below</p>
-    <form method="post" action="/users/register" enctype="multipart/form-data">
-      <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" name="name" type="text" placeholder="Enter Name"/>
-      </div>
-      <div class="form-group">
-        <label>Email</label>
-        <input class="form-control" name="email" type="email" placeholder="Enter Email"/>
-      </div>
-      <div class="form-group">
-        <label>Username</label>
-        <input class="form-control" name="username" type="text" placeholder="Enter Username"/>
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input class="form-control" name="password" type="password" placeholder="Enter Password"/>
-      </div>
-      <div class="form-group">
-        <label>Confirm Password</label>
-        <input class="form-control" name="password2" type="password" placeholder="Confirm Password"/>
-      </div>
-      <div class="form-group">
-        <label>Profile Image</label>
-        <input class="form-control" name="profileimage" type="file"/>
-      </div>
-      <input class="btn btn-primary" type="submit" name="submit" value="Register"/>
-    </form>
+    <div class="container">
+      <h2 class="page-header">Register</h2>
+      <p>Please register using the form below</p>
+      <form method="post" action="/users/register" enctype="multipart/form-data">
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" name="name" type="text" placeholder="Enter Name"/>
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input class="form-control" name="email" type="email" placeholder="Enter Email"/>
+        </div>
+        <div class="form-group">
+          <label>Username</label>
+          <input class="form-control" name="username" type="text" placeholder="Enter Username"/>
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input class="form-control" name="password" type="password" placeholder="Enter Password"/>
+        </div>
+        <div class="form-group">
+          <label>Confirm Password</label>
+          <input class="form-control" name="password2" type="password" placeholder="Confirm Password"/>
+        </div>
+        <div class="form-group">
+          <label>Profile Image</label>
+          <input class="form-control" name="profileimage" type="file"/>
+        </div>
+        <input class="btn btn-primary" type="submit" name="submit" value="Register"/>
+      </form>
+    </div>
   </body>
 </html>
