--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,16 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>Zeitplan is a user-friendly web application designed to be the reminder partner you've always needed.</p>
+    <div class = "container-fluid">
+    	<div class="row flex-xl-nowrap">
+    		<div class="col-12 col-md-3 col-xl-2 bd-sidebar"></div>
+    	</div>
+    </div>
   </body>
 </html>
