--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="cs480App">
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
+    <script src="/javascripts/libraries/angular.min.js"></script>
+	  <script src="/javascripts/controllers/index-control.js"></script>
   </head>
-  <body>
+  <body ng-controller="IndexCtrl">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>Zeitplan is a user-friendly web application designed to be the reminder partner you've always needed.</p>
+    <p ng-cloak>{{sampleData}}</p>
     <div class = "container-fluid">
     	<div class="row flex-xl-nowrap">
     		<div class="col-12 col-md-3 col-xl-2 bd-sidebar"></div>
