--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,46 @@
     <p>Zeitplan is a user-friendly web application designed to be the reminder partner you've always needed.</p>
     <p ng-cloak>{{sampleGet}}</p>
     <p ng-cloak>{{samplePost}}</p>
+    <p ng-cloak>{{tasks}}</p>
+
+    <form name = "AddTaskForm" method = "POST" action = "/api/tasks"></form>
+      <table>
+        <tr>
+          <td>
+            Name
+          </td>
+          <td><input type="text" ng-model="name">
+          </td>
+          <td>
+              Description
+            </td>
+            <td><input type="text" ng-model="description">
+            </td>
+          <td>
+            Complete
+          </td>
+          <td><input type="checkbox" ng-model="isDone">
+          </td>
+          <input type="submit" value = "submit" ng-click="addTask(Task)">
+      </table>
+    </form>
+    <table class="table table-striped table-hover table-sm">
+      <tr>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Complete</th>
+      </tr>
+      <tr ng-repeat="task in tasks">
+        <th>{{ task.name }}</th>
+        <th>{{ task.description }}</th>
+        <th>{{ task.isDone }}</th>
+      </tr>
+          <!-- show data what you want-->
+    </tr>
+
+
+  </table>
+
     <div class = "container-fluid">
     	<div class="row flex-xl-nowrap">
     		<div class="col-12 col-md-3 col-xl-2 bd-sidebar"></div>
