--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,12 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="/javascripts/libraries/angular.min.js"></script>
     <script src="/javascripts/services/restService.js"></script>
-	  <script src="/javascripts/controllers/index-control.js"></script>
+    <script src="/javascripts/controllers/index-control.js"></script>
+    <script src="/javascripts/libraries/jquery-3.3.1.min.js"></script>
+    <script src="/javascripts/libraries/angular-animate.min.js"></script>
+
   </head>
-  <body ng-controller="IndexCtrl">
+  <body class="animate" ng-controller="IndexCtrl">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
@@ -17,9 +20,6 @@
     <% } %>
 
     <p>Zeitplan is a user-friendly web application designed to be the reminder partner you've always needed.</p>
-    <p ng-cloak>{{sampleGet}}</p>
-    <p ng-cloak>{{samplePost}}</p>
-    <p ng-cloak>{{tasks}}</p>
 
     <table class="table table-striped table-hover table-sm">
       <tr>
@@ -57,6 +57,9 @@
     </div>
     </form>
 
+    <p ng-cloak>{{sampleGet}}</p>
+    <p ng-cloak>{{samplePost}}</p>
+    <p ng-cloak>{{tasks}}</p>
 
     <div class = "container-fluid">
     	<div class="row flex-xl-nowrap">
