--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,41 +1,57 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div class="container">
-      <h2 class="page-header">Register</h2>
-      <p>Please register using the form below</p>
-      <form method="post" action="/users/register" enctype="multipart/form-data">
-        <div class="form-group">
-          <label>Name</label>
-          <input class="form-control" name="name" type="text" placeholder="Enter Name"/>
-        </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input class="form-control" name="email" type="email" placeholder="Enter Email"/>
-        </div>
-        <div class="form-group">
-          <label>Username</label>
-          <input class="form-control" name="username" type="text" placeholder="Enter Username"/>
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input class="form-control" name="password" type="password" placeholder="Enter Password"/>
-        </div>
-        <div class="form-group">
-          <label>Confirm Password</label>
-          <input class="form-control" name="password2" type="password" placeholder="Confirm Password"/>
-        </div>
-        <div class="form-group">
-          <label>Profile Image</label>
-          <input class="form-control" name="profileimage" type="file"/>
-        </div>
-        <input class="btn btn-primary" type="submit" name="submit" value="Register"/>
-      </form>
-    </div>
-  </body>
+ <head>
+   <title><%= title %></title>
+   <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
+   <link rel='stylesheet' href='/stylesheets/style.css' />
+ </head>
+ <body>
+   <div class="container">
+     <ul>
+       <li><a href="/users/login">Login</a></li>
+       <li><a href="/users/register">Register</a></li>
+     </ul>
+
+     <br>
+
+     <h2 class="page-header">Register</h2>
+     <p>Please register using the form below</p>
+
+     <% if ( expressFlash.length > 0 ) { %>
+       <center><h2 class="flashMessage">Message: <%= expressFlash %> </h2></center>
+     <% } %>
+
+     <% if (typeof(errors) !== 'undefined' && errors.length > 0) { %>
+       <% for (var i = 0; i < errors.length; i++) { %>
+        <center><h4 class="red">
+          <%= errors[i].msg %>
+        </h4></center>
+       <% } %>
+     <% } %>
+
+     <form method="post" action="/users/register" enctype="multipart/form-data">
+       <div class="form-group">
+         <label>Name</label>
+         <input class="form-control" name="name" type="text" placeholder="Enter Name" required/>
+       </div>
+       <div class="form-group">
+         <label>Email</label>
+         <input class="form-control" name="email" type="email" placeholder="Enter Email" required/>
+       </div>
+       <div class="form-group">
+         <label>Username</label>
+         <input class="form-control" name="username" type="text" placeholder="Enter Username" required/>
+       </div>
+       <div class="form-group">
+         <label>Password</label>
+         <input class="form-control" name="password" type="password" placeholder="Enter Password" required/>
+       </div>
+       <div class="form-group">
+         <label>Confirm Password</label>
+         <input class="form-control" name="password2" type="password" placeholder="Confirm Password" required/>
+       </div>
+       <input class="btn btn-primary" type="submit" name="submit" value="Register"/>
+     </form>
+   </div>
+ </body>
 </html>
