--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,8 @@
     <p>Please login below</p>
 
     <% if ( expressFlash.length > 0 ) { %>
-      <center><h2 class="flashMessage">Message: <%= expressFlash %> </h2></center>
+      <% for(let i = 0; i < expressFlash.length; i++) %>
+      <center><h2 class="flashMessage">Message: <%= expressFlash[i] %> </h2></center>
     <% } %>
 
     <form method="post" action="/users/login">
