Fixed homepage styling issue

--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -8,12 +8,10 @@
 
     <title>Homepage</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
- 
+    <link rel="stylesheet" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="/stylesheets/homepageStyle.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
 
@@ -24,7 +22,7 @@
     <span><button type="button" id="sidebarCollapse" class="btn btn-info"> <i class="fas fa-align-left"></i></button></span>
     <a class="navbar-brand" href="#">ZEITPLAN</a>
     <ul class="navbar-nav mr-auto">
-      
+
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -51,9 +49,9 @@
                 <li class="features">
                     <a href="#">TTR</a>
                 </li>
-                
+
                 <li class="features">
-                    <a href="#">SCHDEULE</a>
+                    <a href="#">SCHEDULE</a>
                 </li class="features">
 
                 <li class="features">
@@ -61,7 +59,7 @@
                 </li class="features">
 
                 <li class="features">
-                    <a href="#">POMADERO</a>
+                    <a href="#">POMODORO</a>
                 </li>
             </ul>
             <hr>
