--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="/javascripts/libraries/angular.min.js"></script>
     <script src="/javascripts/services/restService.js"></script>
 	  <script src="/javascripts/controllers/index-control.js"></script>
@@ -15,7 +15,7 @@
     <% if ( expressFlash.length > 0 ) { %>
     <center><h2 class="flashMessage <%= flashClass %>">Message: <%= expressFlash %> </h2></center>
     <% } %>
-    
+
     <p>Zeitplan is a user-friendly web application designed to be the reminder partner you've always needed.</p>
     <p ng-cloak>{{sampleGet}}</p>
     <p ng-cloak>{{samplePost}}</p>
