--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
        <% } %>
      <% } %>
 
-     <form method="post" action="/users/register" enctype="multipart/form-data">
+     <form method="post" action="/users/register">
        <div class="form-group">
          <label>Name</label>
          <input class="form-control" name="name" type="text" placeholder="Enter Name" required/>
