--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -8,14 +8,22 @@
 
   <title>Homepage</title>
 
+
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/homepageStyle.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/loading-bar.css"/>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/clockstyle.css"/>
+
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular.min.js" integrity="sha256-QRJz3b0/ZZC4ilKmBRRjY0MgnVhQ+RR1tpWLYaRRjSo=" crossorigin="anonymous"></script>
   <script src="/javascripts/services/restService.js"></script>
   <script src="/javascripts/controllers/home-control.js"></script>
+  <script src="/javascripts/libraries/loading-bar.js"></script>
+  <script src="/javascripts/features/clock.js"></script>
+
+
 </head>
 
 <body ng-controller="HomeCtrl">
@@ -66,8 +74,31 @@
       </ul>
       <hr>
     </nav>
+
+    
     <!-- Page Content  -->
     <div class="tab-content">
+        <h1>Countdown Clock</h1>
+        <div id="myItem1"
+        class="ldBar label-center"
+        style="width:50%;height:50%"
+        data-preset="bubble"
+        ></div>
+        <label id="currentTime">0</label>
+
+        <form id="typeForm">
+            <input type="radio" name="type" value="Minutes" checked> Minutes<br>
+            <input type="radio" name="type" value="Seconds" > Seconds<br>
+        </form>
+
+        <div class="slidecontainer">
+            <label id="rangeValLabel"></label>
+            <input id = "slider" type="range" oninput="document.getElementById('rangeValLabel').innerHTML = this.value;" min="1" max="120" value="50" class="slider" id="myRange">
+            <button type="button" onclick="onClick()">Start Timer</button>
+        </div>
+
+        
+
       <div ng-switch='activeTab'>
         <div ng-switch-when="ttr">
           <ng-include src="'ttr.html'"></ng-include>
@@ -78,12 +109,15 @@
         <div ng-switch-when="logs">
           <ng-include src="'logs.html'"></ng-include>
         </div>
-        <div ng-switch-when="pomodoro">
+        <!--<div ng-switch-when="pomodoro">
           <ng-include src="'pomodoro.html'"></ng-include>
-        </div>
+        </div>-->
       </div>
     </div>
+    
+    
   </div>
+  
 </body>
-
+<script src="/javascripts/features/clock.js"></script>
 </html>
