--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -16,6 +16,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular.min.js" integrity="sha256-QRJz3b0/ZZC4ilKmBRRjY0MgnVhQ+RR1tpWLYaRRjSo=" crossorigin="anonymous"></script>
   <script src="/javascripts/services/restService.js"></script>
   <script src="/javascripts/controllers/home-control.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 </head>
 
 <body ng-controller="HomeCtrl">
@@ -83,6 +86,7 @@
         </div>
       </div>
     </div>
+
   </div>
 </body>
 
