--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -70,7 +70,7 @@
       <hr>
     </nav>
     <!-- Page Content  -->
-    <div class="tab-content">
+    <div class="tab-content" style="width:100%">
       <div ng-switch='activeTab'>
         <div ng-switch-when="ttr">
           <ng-include src="'ttr.html'"></ng-include>
