--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -91,8 +91,6 @@
           <ng-include src="'pomodoro.html'"></ng-include>
         </div>
       </div>
-
-      <h1>Countdown Clock</h1>
         <div id = "myItem1" class="ldBar label-center"
         style="width:100%;height:60px",
         data-stroke="data:ldbar/res,gradient(0,1,#9df,#9fd,#df9,#fd9)",
@@ -109,8 +107,10 @@
           <div class="slidecontainer">
               <label id="rangeValLabel"></label>
               <input id = "slider" type="range" oninput="document.getElementById('rangeValLabel').innerHTML = this.value;" min="1" max="120" value="50" class="slider" id="myRange">
-              <button type="button" onclick="onClick()">Start Timer</button>
           </div>
+
+          <button class = "btn btn-primary" type="button" onclick="onClick()">Start Timer</button>
+          <button class = "btn btn-danger" type="button" onclick="stop()">Stop Timer</button>
         </div>
     </div>
   </div>
