--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title%></title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
 
-    <ul>
-      <li><a href="/users/login">Login</a></li>
-      <li><a href="/users/register">Register</a></li>
+<head>
+  <title>
+    <%= title%>
+  </title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
+    crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/stylesheets/homepageStyle.css">
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+</head>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <span><button type="button" id="sidebarCollapse" class="btn btn-info"> <i class="fas fa-align-left"></i></button></span>
+    <!--<a class="navbar-brand" href="#">ZEITPLAN</a>-->
+    <img id="logo" class="text-center" src="/resources/logo2.png">
+    <ul class="navbar-nav mr-auto">
     </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/users/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/register">Register</a>
+      </li>
+    </ul>
+  </nav>
 
-    <br>
+  <br>
 
-    <h2 class="page-header">Zeitplan Login</h2>
-    <p>Please login below</p>
+  <div id="margintop" class="container-fluid">
+    <div class="container col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-8">
 
-    <% if ( expressFlash.length > 0 ) { %>
-      <center><h2 class="flashMessage">Message: <%= expressFlash %> </h2></center>
-    <% } %>
+      <form id="loginform" method="post" action="/users/login">
 
-    <form method="post" action="/users/login">
-      <div class="form-group">
-        <label>Username</label>
-        <input class="form-control" name="username" type="text" placeholder="Enter Username"/>
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input class="form-control" name="password" type="password" placeholder="Enter Password"/>
-      </div>
-      <input class="btn btn-primary" type="submit" name="submit" value="Login"/>
-    </form>
-  </body>
+        <h2 class="page-header text-center">Zeitplan Login</h2>
+        <p class="text-center">Please login below</p>
+
+        <% if ( expressFlash.length > 0 ) { %>
+        <center>
+          <h2 class="flashMessage">Message:
+            <%= expressFlash %>
+          </h2>
+        </center>
+        <% } %>
+        <hr class="colorgraph">
+        <div class="form-group">
+          <label>Username</label>
+          <input class="form-control" name="username" type="text" placeholder="Enter Username" />
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input class="form-control" name="password" type="password" placeholder="Enter Password" />
+        </div>
+        
+        <input class="btn btn-primary" type="submit" name="submit" value="Login" />
+      </form>
+    </div>
+  </div>
+</body>
+
 </html>
