Added phone number to register page and mongodb

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -66,12 +66,16 @@
           <input class="form-control" name="name" type="text" placeholder="Enter Name" required />
         </div>
         <div class="form-group">
+          <label>Username</label>
+          <input class="form-control" name="username" type="text" placeholder="Enter Username" required />
+        </div>
+        <div class="form-group">
           <label>Email</label>
           <input class="form-control" name="email" type="email" placeholder="Enter Email" required />
         </div>
         <div class="form-group">
-          <label>Username</label>
-          <input class="form-control" name="username" type="text" placeholder="Enter Username" required />
+          <label>Phone Number</label>
+          <input class="form-control" name="phoneNumber" type="tel" placeholder="Enter Phone Number" required />
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6">
@@ -90,8 +94,6 @@
         <div class="form-group">
             <input class="btn btn-primary" type="submit" name="submit" value="Register" />
         </div>
-
-
     </div>
     </form>
 </body>
