created logs-controller and set up logs page

--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -20,6 +20,7 @@
   <script src="/javascripts/services/restService.js"></script>
   <script src="/javascripts/controllers/home-control.js"></script>
   <script src="/javascripts/controllers/ttr-control.js"></script>
+  <script src="/javascripts/controllers/log-control.js"></script>
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
   <script src="/javascripts/libraries/loading-bar.js"></script>
