--- a/public/stylesheets/logsStyle.css
+++ b/public/stylesheets/logsStyle.css
@@ -1,18 +1,9 @@
 #container {
 	padding: 25px 50px 25px 50px;
-
 }
 
 #log_container {
-	background-color: #F2F4F5;
-	border: solid;
-	border-radius: 10px;
-	border-width: 1px;
-	padding: 10px 10px 10px 10px;
-}
-
-#log_cards {
-	padding-top: 20px;
+	/* padding: 10px 10px 10px 10px; */
 }
 
 .sample-show-hide {
@@ -20,4 +11,10 @@
 }
 .sample-show-hide.ng-hide {
   opacity: 0;
+}
+
+#log_separator {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
