--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -29,7 +29,7 @@
 </head>
 
 <body ng-controller="HomeCtrl">
-  <setting-modal model="settingModal" user_id="user_id"></setting-modal>
+  <setting-modal model="settingModal" user_id="user_id" text-status="textStatus" email-status="emailStatus" push-status="pushStatus"></setting-modal>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <span><button type="button" id="sidebarCollapse" class="btn btn-info" ng-click="toggleSidebar()"> <i class="fas fa-align-left"></i></button></span>
       <a class="navbar-brand" href="#">ZEITPLAN</a>
@@ -38,7 +38,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#" ng-click="settingModal.open()">Settings</a>
+          <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -138,21 +138,21 @@
         <form name="editTTR" style="text-align:center">
           <div>
             <label for="txtMsg">Text Message</label>
-            <input type="checkbox" id="txtMsg" ng-model="textStatus" ng-init='textStatus=false'>
+            <input type="checkbox" id="txtMsg" ng-model="textStatus" ng-init='textStatus=$parent.textStatus' ng-value='$parent.textStatus'>
           </div>
           <div>
             <label for="email">Email</label>
-            <input type="checkbox" id="email" ng-model="emailStatus" ng-init='emailStatus=false'>
+            <input type="checkbox" id="email" ng-model="emailStatus" ng-init='emailStatus=$parent.emailStatus' ng-value='$parent.emailStatus'>
           </div>
           <div>
             <label for="pushNotification">Push Notification</label>
-            <input type="checkbox" id="pushNotification" ng-model="pushStatus" ng-init='pushStatus=false'>
+            <input type="checkbox" id="pushNotification" ng-model="pushStatus" ng-init='pushStatus=$parent.pushStatus' ng-value='$parent.pushStatus'>
           </div>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-info" ng-click="changeSettings()">Done</button>
+        <button type="submit" class="btn btn-info" ng-click="$parent.changeSettings($parent.user_id)">Done</button>
       </div>
     </div>
   </div>
