--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -116,6 +116,14 @@
 
           <button class = "btn btn-primary" type="button" onclick="onClick()">Start Timer</button>
           <button class = "btn btn-danger" type="button" onclick="stop()">Stop Timer</button>
+          <script>
+            bar1 = new ldBar("#myItem1");
+            rangeValLabel = document.getElementById("rangeValLabel");
+            typeSelect = document.getElementById("typeForm");
+            slider = document.getElementById('slider');
+            secondsLabel = document.getElementById('currentTime');
+            rangeValLabel.innerHTML = slider.value;
+          </script>
         </div>
       </div>
     </div>
