--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" ng-click='activeTab="about";' onClick="showTimer(false);">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/logout">Sign Out</a>
@@ -95,6 +95,9 @@
         </div>
         <div ng-switch-when="pomodoro">
             <ng-include src="'pomodoro.html'"></ng-include>
+        </div>
+        <div ng-switch-when="about">
+            <ng-include src="'about.html'"></ng-include>
         </div>
       </div>
       <div id="pomodoroTimer" style="display:none;width:100%">
