--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
     <%= title %>
   </title>
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fixed-top">
     <span><button type="button" id="sidebarCollapse" class="btn btn-info"><i class="fas fa-align-left"></i></button></span>
     <!--<a class="navbar-brand" href="#">ZEITPLAN</a>-->
     <img id="logo" class="text-center" src="/resources/logo2.png">
