--- a/public/stylesheets/homepageStyle.css
+++ b/public/stylesheets/homepageStyle.css
@@ -1,4 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
@@ -128,12 +129,20 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-.dropdown-toggle::after {
+/* .dropdown-toggle::after {
     display: block;
     position: absolute;
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
+} */
+
+
+.dropdown > .dropdown-menu {
+  display: none; //hides .dropdown-menu directly inside .dropdown
+}
+.dropdown.show > .dropdown-menu {
+  display: block; //shows .dropdown-menu directly inside .dropdown if it has class .show
 }
 
 ul ul a {
@@ -191,6 +200,7 @@ a.article:hover {
 }
 
 
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -217,6 +227,16 @@ a.article:hover {
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
+  #mobileNav{
+    display:inline !important;
+    width:100%;
+  }
+  #desktopNav{
+    display:none;
+  }
+    #sidbarToggle{
+      display:none;
+    }
     #bottomNavbar{
       display:inline-block;
       position:fixed;
@@ -228,29 +248,22 @@ a.article:hover {
         padding: 2%;
         width:25%;
     }
-    #menuSelect{
-      display:none;
-    }
     #sidebar {
       display: none;
     }
-    #sidebar.active {
-        margin-left: 0;
-    }
     #sidebarCollapse {
         display: none;
+    }
+    #page-content{
+        margin-top:5%;
+        max-height: 85vh;
+        overflow-y: auto;
     }
 }
 
 /* ---------------------------------------------------
     TTR
 ----------------------------------------------------- */
-#ttrDiv{
-  width: 80%;
-  margin-top:1%;
-  margin-left: 5%;
-}
-
 #ttrTable td:first-child{
   width:10%;
 }
