--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -30,32 +30,42 @@
 
 <body ng-controller="HomeCtrl">
   <setting-modal model="settingModal" user_id="user_id" text-status="textStatus" email-status="emailStatus" push-status="pushStatus"></setting-modal>
-    <nav id="topNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <span><button type="button" id="sidebarCollapse" class="btn btn-info" ng-click="toggleSidebar()"> <i class="fas fa-align-left"></i></button></span>
-      <a class="navbar-brand" href="#">ZEITPLAN</a>
-      <ul id="menuSelect" class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" ng-click='activeTab="about";' onClick="showTimer(false);">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/logout">Sign Out</a>
-        </li>
-      </ul>
-      <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
+  <nav id="desktopNav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <span><button type="button" id="sidebarCollapse" class="btn btn-info" ng-click="toggleSidebar()"> <i class="fas fa-align-left"></i></button></span>
+    <a class="navbar-brand" href="#">ZEITPLAN</a>
+    <ul class="navbar-nav mr-auto">
 
-    </nav>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/logout">Sign Out</a>
+      </li>
+    </ul>
+  </nav>
+
+    <nav id="mobileNav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="display:none">
+        <a class="navbar-brand" href="#">LOGO</a>
+        <a class="navbar-brand" href="#" ng-cloak>{{activeTab}}</a>
+        <div class="dropdown" style="display:inline">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false" style="float:right">
+            <i class="fas fa-cog"></i>
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
+            <a class="nav-link" ng-click='activeTab="about";' onClick="showTimer(false);">About</a>
+            <a class="nav-link" href="/users/logout">Sign Out</a>
+          </div>
+        </div>
+      </nav>
+
+
 <!-- Is this needed?-->
   <div id="navbar" class="collapse navbar-collapse">
     <ul class="nav navbar-nav navbar-right">
@@ -89,7 +99,7 @@
     </nav>
 
     <!-- Bottom SideBar-->
-    <div id="bottomNavbar" class="navbar-fixed-bottom">
+    <div id="bottomNavbar" class="navbar navbar-expand-lg fixed-bottom">
       <a ng-click='activeTab="ttr"' onClick="showTimer(false);">TTR</a>
       <a ng-click='activeTab="schedule"' onClick="showTimer(false);">SCHED</a>
       <a ng-click='activeTab="logs"' onClick="showTimer(false);">LOGS</a>
