--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -30,13 +30,10 @@
 
 <body ng-controller="HomeCtrl">
   <setting-modal model="settingModal" user_id="user_id" text-status="textStatus" email-status="emailStatus" push-status="pushStatus"></setting-modal>
-  <nav id="desktopNav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav id="desktopNav" class="navbar navbar-expand-md navbar-light bg-light fixed-top navbar-inverse bg-primary">
     <span><button type="button" id="sidebarCollapse" class="btn btn-info" ng-click="toggleSidebar()"> <i class="fas fa-align-left"></i></button></span>
     <a class="navbar-brand" href="#">ZEITPLAN</a>
-    <ul class="navbar-nav mr-auto">
-
-    </ul>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav ml-auto navbar-expand-lg">
       <li class="nav-item">
         <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
       </li>
@@ -52,7 +49,7 @@
     <nav id="mobileNav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="display:none">
         <a class="navbar-brand" href="#">LOGO</a>
         <a class="navbar-brand" href="#" ng-cloak>{{activeTab}}</a>
-        <div class="dropdown" style="display:inline">
+        <div class="dropdown" style="display:inline-block;float:right">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" style="float:right">
             <i class="fas fa-cog"></i>
