--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -48,7 +48,7 @@
 
     <nav id="mobileNav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="display:none">
         <a class="navbar-brand" href="#">LOGO</a>
-        <a class="navbar-brand" href="#" ng-cloak>{{activeTab}}</a>
+        <a class="navbar-brand" href="#" ng-cloak>{{activeTab | uppercase}}</a>
         <div class="dropdown" style="display:inline-block;float:right">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" style="float:right">
