--- a/public/stylesheets/clockstyle.css
+++ b/public/stylesheets/clockstyle.css
@@ -1,8 +1,22 @@
-.ldBar-label:after {
+.ldBar-label{
+    display: none;
     content: "";
     color: #000;
     margin-left: 5px;
     font-family: courier new;
     font-size: 14;
     font-weight: 200;
+}
+
+
+#info{
+    position: absolute;
+    top:50%;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top:0;
+    padding-top: 10%;
+    width: 50%;
 }
