--- a/public/stylesheets/homepageStyle.css
+++ b/public/stylesheets/homepageStyle.css
@@ -47,7 +47,8 @@ a:focus {
 }
 
 #bottomNavbar{
-    background-color: black;
+    background-color: #7386D5;
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(253, 253, 253, 0.25));
     overflow: hidden;
     bottom: 0;
     width: 100%;
@@ -74,7 +75,8 @@ a:focus {
 }
 
 #sidebar {
-    background: #7386D5;
+    background-color: #7386D5;
+    background-image: linear-gradient(145deg, rgba(0, 0, 0, 0), rgba(253, 253, 253, 0.25));
     color: #fff;
     transition: all 0.3s;
 }
